# xxd

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  build-pypi-linux.sh  pyproject.toml  release-pypi-linux.sh  requirements.txt  setup.py
benchmark/: CMakeLists.txt  config.h.in
cmake/: km_xxd.cmake  xxd.cmake  xxd_config.cmake.in  xxd_cpack_config.cmake  xxd_cxx_config.cmake  xxd_deps.cmake  xxd_test.cmake
examples/: CMakeLists.txt  foo_ex.cc
kmcmake/: README.md  kmcmake_module.cmake  kmcmake_option.cmake
kmcmake/copts/: copts.py  generate_copts.py
kmcmake/package/: CPack.STGZ_Header.sh.in
kmcmake/tools/: default_setting.cmake  git_commit.cmake  kmcmake_cc_benchmark.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_interface.cmake  kmcmake_cc_library.cmake  kmcmake_cc_object.cmake  kmcmake_cc_proto.cmake  kmcmake_cc_test.cmake  simd_detect.cmake
tests/: CMakeLists.txt  args_test.cc  config.h.in  foo_doctest.cc  foo_test.cc  pass_test.cc  raw_test.cc
xxd/: CMakeLists.txt  api.h  foo.cc  foo.h  main.cc  version.h.in
xxd/abc/bdc/: a.md
